@@ -1,5 +1,5 @@
 %------------------------------------------
-%       $Id: GMT_Cover.tex,v 1.27 2011-03-15 02:06:29 guru Exp $
+%       $Id: GMT_Cover.tex,v 1.28 2011-04-18 19:30:27 remko Exp $
 %
 %       The GMT Documentation Project
 %	Copyright (c) 2000-2011.
@@ -55,5 +55,5 @@
 \vspace{0.5\baselineskip}
 
 
-\includegraphics{scripts/GMT_coverlogo}
+\includegraphics{GMT_coverlogo}
 \end{center}
